tests/negative/array_assign.ax
module array_assign;

struct Buffer {
    data: [4]u8;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var a: *mut Buffer = null;
    var b: *mut Buffer = null;
    *a = *b;
    return 0;
}
